--- a/src/components/FilterBar.css
+++ b/src/components/FilterBar.css
@@ -8,9 +8,11 @@
     bottom:0;
     z-index: 10; */
     width: 100%;
-    margin-top: 150px;
-    max-width: 200px;
-    min-width: 200px;
+    /* margin-top: 150px;
+    max-width: 100%;
+    min-width: 100%; */
+    height: 400px;
+    /* overflow-y: scroll; */
     }
 
     .filter-bar__prices{
@@ -20,7 +22,7 @@
     }
     .filter-bar__prices button{
 
-        border:1px solid grey;
+        border:1px solid grey ;
         cursor: pointer;
         padding:5px 10px;
     }
