--- a/src/components/FilterBar.css
+++ b/src/components/FilterBar.css
@@ -8,11 +8,11 @@
     bottom:0;
     z-index: 10; */
     width: 100%;
-    /* margin-top: 150px;
+    margin-top: 150px;
     max-width: 100%;
-    min-width: 100%; */
+    min-width: 100%;
     height: 400px;
-    /* overflow-y: scroll; */
+    overflow-y: scroll;
     }
 
     .filter-bar__prices{
