--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,11 @@
 @tailwind utilities;
 
 body {
-    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    max-width: 100%;
+    /* max-height: 50%; */
+    overflow: scroll;
+    background-size: cover;
 }
