--- a/src/components/FilterBar.css
+++ b/src/components/FilterBar.css
@@ -9,9 +9,11 @@
     z-index: 10; */
     width: 100%;
     margin-top: 150px;
-    max-width: 100%;
-    min-width: 100%;
-    height: 400px;
+    max-width: 100vh;
+    min-width: 10vh;
+    height: 100%;
+    min-height:100vh;
+    max-height:100vh;
     overflow-y: scroll;
     }
 
