--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,11 @@ body {
     padding: 0;
     box-sizing: border-box;
     max-width: 100%;
+    /* width:100%: */
     /* max-height: 50%; */
     overflow: scroll;
     background-size: cover;
+    background-color:black ;
+    /* tw-text-opacity: 1; */
+    background-color: rgb(31 41 55 / var(--tw-text-opacity));
 }
