--- a/src/index.css
+++ b/src/index.css
@@ -3,15 +3,11 @@
 @tailwind utilities;
 
 body {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
     max-width: 100%;
-    /* width:100%: */
-    /* max-height: 50%; */
     overflow: scroll;
     background-size: cover;
     background-color:black ;
-    /* tw-text-opacity: 1; */
-    background-color: rgb(31 41 55 / var(--tw-text-opacity));
 }
